--- a/week_5_spark_batch/code/06_spark_sql.ipynb
+++ b/week_5_spark_batch/code/06_spark_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "spark = SparkSession.builder \\\n",
+    "    .master(\"spark://ip:port\") \\\n",
+    "    .appName('test') \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://DESKTOP-AOUJ0EH:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.0.3</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>test</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x2e0baec1c70>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,14 +106,12 @@
        " 'RatecodeID',\n",
        " 'VendorID',\n",
        " 'congestion_surcharge',\n",
-       " 'dropoff_datetime',\n",
        " 'extra',\n",
        " 'fare_amount',\n",
        " 'improvement_surcharge',\n",
        " 'mta_tax',\n",
        " 'passenger_count',\n",
        " 'payment_type',\n",
-       " 'pickup_datetime',\n",
        " 'store_and_fwd_flag',\n",
        " 'tip_amount',\n",
        " 'tolls_amount',\n",
@@ -63,7 +119,7 @@
        " 'trip_distance'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_yellow = df_yellow \\\n",
+    "    .withColumnRenamed('tpep_pickup_datetime', 'pickup_datetime') \\\n",
+    "    .withColumnRenamed('tpep_dropoff_datetime', 'dropoff_datetime')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +167,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['VendorID',\n",
+       " 'pickup_datetime',\n",
+       " 'dropoff_datetime',\n",
+       " 'store_and_fwd_flag',\n",
+       " 'RatecodeID',\n",
+       " 'PULocationID',\n",
+       " 'DOLocationID',\n",
+       " 'passenger_count',\n",
+       " 'trip_distance',\n",
+       " 'fare_amount',\n",
+       " 'extra',\n",
+       " 'mta_tax',\n",
+       " 'tip_amount',\n",
+       " 'tolls_amount',\n",
+       " 'improvement_surcharge',\n",
+       " 'total_amount',\n",
+       " 'payment_type',\n",
+       " 'congestion_surcharge']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "common_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "common_columns = [\n",
+    "    'VendorID',\n",
+    "    'pickup_datetime',\n",
+    "    'dropoff_datetime',\n",
+    "    'store_and_fwd_flag',\n",
+    "    'RatecodeID',\n",
+    "    'PULocationID',\n",
+    "    'DOLocationID',\n",
+    "    'passenger_count',\n",
+    "    'trip_distance',\n",
+    "    'fare_amount',\n",
+    "    'extra',\n",
+    "    'mta_tax',\n",
+    "    'tip_amount',\n",
+    "    'tolls_amount',\n",
+    "    'improvement_surcharge',\n",
+    "    'total_amount',\n",
+    "    'payment_type',\n",
+    "    'congestion_surcharge'\n",
+    " ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +272,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['VendorID',\n",
+       " 'pickup_datetime',\n",
+       " 'dropoff_datetime',\n",
+       " 'store_and_fwd_flag',\n",
+       " 'RatecodeID',\n",
+       " 'PULocationID',\n",
+       " 'DOLocationID',\n",
+       " 'passenger_count',\n",
+       " 'trip_distance',\n",
+       " 'fare_amount',\n",
+       " 'extra',\n",
+       " 'mta_tax',\n",
+       " 'tip_amount',\n",
+       " 'tolls_amount',\n",
+       " 'improvement_surcharge',\n",
+       " 'total_amount',\n",
+       " 'payment_type',\n",
+       " 'congestion_surcharge',\n",
+       " 'service_type']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_trips_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -203,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_result = spark.sql(\"\"\"\n",
-    "SELECT\n",
+    "SELECT \n",
     "    -- Reveneue grouping \n",
-    "    PUlocationID AS revenue_zone,\n",
+    "    PULocationID AS revenue_zone,\n",
     "    date_trunc('month', pickup_datetime) AS revenue_month, \n",
-    "    service_type,\n",
+    "    service_type, \n",
     "\n",
     "    -- Revenue calculation \n",
     "    SUM(fare_amount) AS revenue_monthly_fare,\n",
@@ -227,11 +397,10 @@
     "    -- Additional calculations\n",
     "    AVG(passenger_count) AS avg_montly_passenger_count,\n",
     "    AVG(trip_distance) AS avg_montly_trip_distance\n",
-    "\n",
-    "    FROM \n",
-    "        trips_data\n",
-    "    GROUP BY \n",
-    "        revenue_zone, revenue_month, service_type\n",
+    "FROM\n",
+    "    trips_data\n",
+    "GROUP BY\n",
+    "    1, 2, 3\n",
     "\"\"\")"
    ]
   },
